<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" android:orientation="vertical">
    <View
        android:layout_height="2dip"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />  
    <TextView 
    	android:id="@+id/textViewInsertFeedback" 
    	android:layout_height="wrap_content" 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:text="Legend" 
    	android:layout_width="wrap_content"
    	android:padding="5dp">
    </TextView>
    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray" />
    <TableLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="10dp"
    	android:stretchColumns="1">
    <TableRow android:gravity="center_vertical">
    	<TextView
			android:text="@string/jam_legend_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent"  
			android:gravity="left"
    		android:singleLine="true"/>
		<ImageView
			android:layout_width="match_parent"  
			android:layout_height="wrap_content" 
			android:src="@drawable/brown_marker_j" 
			android:layout_gravity="right"
			android:paddingRight="12dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp"/>	
	</TableRow>
    <TableRow android:gravity="center_vertical">
    	<TextView 
			android:text="@string/car_crash_legend_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent"  
			android:gravity="left"
    		android:singleLine="true"/>
		<ImageView 
			android:id="@+id/imageViewSearchIcon"
			android:layout_width="wrap_content"  
			android:layout_height="wrap_content" 
			android:src="@drawable/red_marker_c" 
			android:layout_gravity="right"
			android:paddingRight="12dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp"/>	
	</TableRow>    
    <TableRow android:gravity="center_vertical">
    	<TextView
			android:text="@string/work_in_progress_legend_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent"  
			android:gravity="left"
    		android:singleLine="true"/>		
    	<ImageView
			android:layout_width="wrap_content"  
			android:layout_height="wrap_content" 
			android:src="@drawable/yellow_marker_w" 
			android:layout_gravity="right"
			android:paddingRight="12dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp"/>	
	</TableRow> 
	<TableRow android:gravity="center_vertical">
    	<TextView
			android:text="@string/mobile_speed_cam_legend_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent"  
			android:gravity="left"
    		android:singleLine="true"/>		
    	<ImageView
			android:layout_width="wrap_content"  
			android:layout_height="wrap_content" 
			android:src="@drawable/blue_marker_s" 
			android:layout_gravity="right"
			android:paddingRight="12dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp"/>	
	</TableRow>
	<TableRow android:gravity="center_vertical">
    	<TextView
			android:text="@string/fixed_speed_cam_legend_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent"  
			android:gravity="left"
    		android:singleLine="true"/>		
    	<ImageView
			android:layout_width="wrap_content"  
			android:layout_height="wrap_content" 
			android:src="@drawable/orange_marker_s" 
			android:layout_gravity="right"
			android:paddingRight="12dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp"/>	
	</TableRow>
		<TableRow android:gravity="center_vertical">
    	<TextView
			android:text="@string/user_position_legend_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent"  
			android:gravity="left"
    		android:singleLine="true"/>		
    	<ImageView
			android:layout_width="wrap_content"  
			android:layout_height="wrap_content" 
			android:src="@drawable/ic_maps_indicator_current_position" 
			android:layout_gravity="right"
			android:padding="2dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp"/>	
	</TableRow>                
	</TableLayout>
</LinearLayout>

