<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:background="#FFFFFF"
	android:weightSum="100">
	<ImageView 
  		android:id="@+id/myMedLogo" 
		android:src="@drawable/logo_mymed"
		android:layout_width="wrap_content" 
		android:layout_height="0dp" 
		android:layout_weight="20"
		android:layout_gravity="center_horizontal"/>
	<TextView 
    	android:id="@+id/textViewSignIn"
    	android:textAppearance="?android:attr/textAppearanceSmall" 
    	android:layout_width="wrap_content"
    	android:textColor="#000000"
		android:textStyle="italic"
    	android:text="@string/sign_in_link" 
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	android:clickable="true"
    	android:typeface="sans">
    </TextView>
	  
	<LinearLayout  
    	android:id="@+id/linearLayoutCenter" 
    	android:layout_width="match_parent" 
    	android:layout_height="0dp" 
    	android:orientation="vertical" 
    	android:layout_weight="80"
    	android:weightSum="100"
    	android:background="@drawable/panel_gray_frame">
    	<LinearLayout  
    		android:id="@+id/linearLayoutBody" 
    		android:layout_width="match_parent" 
    		android:layout_height="0dp"
    		android:layout_gravity="top"
    		android:layout_weight="20"
    		android:gravity="center_horizontal"
    		android:orientation="horizontal"
    		android:padding="2dip">
    		<ImageView 
  				android:id="@+id/MyJamLogo" 
				android:src="@drawable/logo_myjam"
				android:layout_width="wrap_content" 
				android:layout_height="match_parent" 
				android:layout_gravity="center_vertical"/>			
			<TextView 
   				android:id="@+id/textViewTitle" 
   				android:textAppearance="?android:attr/textAppearanceMedium" 
    			android:layout_width="wrap_content"
   				android:textColor="#000000"
   				android:text="@string/app_name" 
   				android:textSize="30sp"
   				android:textStyle="bold"
    			android:layout_height="wrap_content"
   				android:layout_gravity="center_vertical"
   				android:typeface="sans">
   			</TextView>
		</LinearLayout>
		
		<View
        android:layout_height="2dip"
        android:layout_width="match_parent"
        android:background="#000000" />
        
		<LinearLayout 
		    android:id="@+id/linearLayoutBody" 
    		android:layout_width="match_parent" 
    		android:layout_height="0dp"
    		android:layout_gravity="top"
    		android:layout_weight="80"
    		android:gravity="center_vertical"
    		android:orientation="vertical">
			<TextView 
				android:id="@+id/textViewLogged"
				android:text="Iacopo is logged" 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal"
				android:textColor="#000000"  
				android:textAppearance="?android:attr/textAppearanceLarge">
			</TextView>    	
    		<TextView 
	    		android:id="@+id/textViewLogin" 
    			android:textAppearance="?android:attr/textAppearanceMedium" 
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="@string/login_text_view_label">
 			</TextView>
	    	<EditText 
    			android:id="@+id/editTextLogin"
    			android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
	    		android:layout_gravity="center_horizontal">
        		<requestFocus></requestFocus>
    		</EditText>
    		<TextView 
	    		android:textAppearance="?android:attr/textAppearanceMedium" 
    			android:id="@+id/textViewPwd" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
	    		android:layout_gravity="center_vertical"
    			android:text="@string/password_text_view_label"
    			android:textColor="#000000">
    		</TextView>
	    	<EditText 
    			android:id="@+id/editTextPwd"
    			android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
	    		android:layout_gravity="center_horizontal"  
    			android:inputType="textPassword">
    		</EditText>		
    		<Button 
    			android:id="@+id/buttonHome"
    			android:layout_height="wrap_content"
    			android:layout_width="150dp"
    			android:layout_gravity="center_horizontal"
    			android:text="@string/home_button_label">
    		</Button>
    		<Button 
    			android:id="@+id/buttonLogIn"
    			android:layout_height="wrap_content"
    			android:layout_width="150dp"
    			android:layout_gravity="center_horizontal"
    			android:text="@string/login_button_label">
    		</Button>
    	</LinearLayout>
    </LinearLayout>
</LinearLayout>
