<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/relativeLayout1" 
android:layout_height="wrap_content" 
android:layout_width="match_parent" 
android:orientation="horizontal"
android:gravity="center_vertical"
android:paddingTop="0dp"
android:paddingBottom="5dp"
android:background="@drawable/gray_frame_two_state">
<ImageView 
		android:id="@+id/imageViewSearchIcon"
		android:layout_width="wrap_content"  
		android:layout_height="wrap_content" 
		android:src="@drawable/blue_marker_s" 
		android:layout_alignParentLeft="true"
		android:padding="10dip">
	</ImageView>
	<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="10dip"
    android:paddingLeft="10dip"
    android:paddingTop="0dip"
    android:layout_marginTop="0dp"
    android:padding="-10dp"
    android:stretchColumns="1">
    <TableRow android:gravity="center_vertical">
		<TextView android:id="@+id/textViewDistance"
			style="@style/DarkLabelText" 
			android:text="@string/distance_label" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:gravity="left"
    		android:singleLine="true"
    		android:paddingTop="0dip">
		</TextView>
		<TextView android:id="@+id/textDistance"
			style="@style/DarkDataTextLarge"
			android:text="distance"
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content" 
    		android:gravity="right">
		</TextView>	
	</TableRow>
    <TableRow android:gravity="center_vertical">	
		<TextView android:id="@+id/textDateType"
			style="@style/DarkLabelText"
			android:text="@string/post_date_label" 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content"  
			android:gravity="left">
		</TextView>	
		<TextView android:id="@+id/textDate"
			style="@style/DarkDataText"
			android:text="Date" 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content"  
			android:gravity="right">
		</TextView>
	</TableRow>
    <TableRow android:gravity="center_vertical">	
		<TextView android:id="@+id/textViewType"
			style="@style/DarkLabelText"
			android:text="@string/type_label" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:gravity="left"
    		android:singleLine="true">
		</TextView>
		<TextView android:id="@+id/textType"
			style="@style/DarkDataText"
			android:text="Type"
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content" 
    		android:gravity="right"
    		android:singleLine="true">
		</TextView>
	</TableRow>
    </TableLayout>
</LinearLayout>